website/versioned_docs/version-7.11.2/docs/docs-showcases.mdx
---
id: showcases
title: Showcases
sidebar_label: Showcases
---

## Apps
### Hekla for Hacker News

A hacker news client built from the ground up with v2 of react-native-navigation. 

It is a tab-based app and utilizes Split Layout for iOS tablets, 3D touch and more.

- [Source code](https://github.com/birkir/hekla)
- [Download iOS](https://itunes.apple.com/us/app/hekla/id1405096983?mt=8)
- [Download Android](https://play.google.com/store/apps/details?id=is.pipe.hekla)

## Starter Kits
* [kanzitelli/expo-rnn-starter](https://github.com/kanzitelli/expo-rnn-starter) - Simple yet practical starter with React Native Navigation and [Expo Modules](https://docs.expo.io/bare/installing-unimodules/), [MobX-State-Tree](https://github.com/mobxjs/mobx-state-tree) and [Redux](https://github.com/reduxjs/redux) (pick one) and more goodies inside such as Typescript, [RNN Hooks](https://github.com/underscopeio/react-native-navigation-hooks), [RN Vector Icons](https://github.com/oblador/react-native-vector-icons), [RN Gesture Handler](https://github.com/kmagiera/react-native-gesture-handler). As an example, basic Reddit App implemented in two ways: using [MobX-State-Tree](https://github.com/mobxjs/mobx-state-tree) in `/srcMobX` and using [Redux](https://github.com/reduxjs/redux) in `/srcRedux`.
* [atoami/react-native-navigation-redux-starter-kit](https://github.com/atoami/react-native-navigation-redux-starter-kit) - React Native Navigation(v2) Starter Kit with Redux, Saga, ESLint, Babel and Jest 😎
* [alexwasner/react-native-mobx-firebase-starter](https://github.com/alexwasner/react-native-mobx-firebase-starter) - A React Native starter app with React Native Navigation(v2), MobX, Firebase, Lottie and More 🤓

* [hsyndeniz/react-native-quick-start](https://github.com/hsyndeniz/react-native-quick-start) - A React Native starter app with React Native Navigation, Redux, Firebase, Social Auth, Phone Auth, Push Notifications, Google Maps, Google Admob, Lottie and More 🤓

### Playground

The playground example is a place where we showcase and test all features of react-native-navigation.

```bash
git clone https://github.com/wix/react-native-navigation
cd react-native-navigation
npm install

# for iOS:
npm run xcode # Opens XCode
npm start # Starts the packager on linux like systems

# for Android:
# 1. open Android Studio inside ".\playground"
# 2. start a emulator
npm run start-windows # Start the packager if you are on a windows system

# Run the app in Simulator or on Device from within XCode/Android Studio
```
