website/versioned_docs/version-7.16.0/docs/docs-showcases.mdx
---
id: showcases
title: Showcases
sidebar_label: Showcases
---

## Apps
### Hekla for Hacker News

A hacker news client built from the ground up with v2 of react-native-navigation. 

It is a tab-based app and utilizes Split Layout for iOS tablets, 3D touch and more.

- [Source code](https://github.com/birkir/hekla)
- [Download iOS](https://itunes.apple.com/us/app/hekla/id1405096983?mt=8)
- [Download Android](https://play.google.com/store/apps/details?id=is.pipe.hekla)

## Starter Kits
* [kanzitelli/rnn-starter](https://github.com/kanzitelli/rnn-starter) - Production-ready starter for your next React Native App! Powered by cli-rn, React Native Navigation, RN UI lib, Mobx, Reanimated 2, Notifications, Permissions, Dark Mode, Localization, and much more.

https://user-images.githubusercontent.com/4402166/122827138-47911900-d2e4-11eb-8bc4-17cad2e4cc67.mp4

* [atoami/react-native-navigation-redux-starter-kit](https://github.com/atoami/react-native-navigation-redux-starter-kit) - React Native Navigation(v2) Starter Kit with Redux, Saga, ESLint, Babel and Jest 😎
* [alexwasner/react-native-mobx-firebase-starter](https://github.com/alexwasner/react-native-mobx-firebase-starter) - A React Native starter app with React Native Navigation(v2), MobX, Firebase, Lottie and More 🤓

* [hsyndeniz/react-native-quick-start](https://github.com/hsyndeniz/react-native-quick-start) - A React Native starter app with React Native Navigation, Redux, Firebase, Social Auth, Phone Auth, Push Notifications, Google Maps, Google Admob, Lottie and More 🤓

### Playground

The playground example is a place where we showcase and test all features of react-native-navigation.

```bash
git clone https://github.com/wix/react-native-navigation
cd react-native-navigation
npm install

# for iOS:
npm run xcode # Opens XCode
npm start # Starts the packager on linux like systems

# for Android:
# 1. open Android Studio inside ".\playground"
# 2. start a emulator
npm run start-windows # Start the packager if you are on a windows system

# Run the app in Simulator or on Device from within XCode/Android Studio
```
